src/main/java/example/presentation/view/errors/ErrorType.java
package example.presentation.view.errors;

public enum ErrorType {
    BadRequest, //400
    Unauthorized,  //401
    NotFound, //404
    Unknown,  //500

    FieldError,
}
